Wrap the body (between header and footer) of the pages and give add to style.css a min height rather then use a footer fixed to bottom as it prevents scrolling on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,10 @@ p {
     letter-spacing: 4px;
 }
 
+main {
+    min-height: calc(100vh - 153px);
+}
+
 /* --------------------------------- nav */
 
 
